--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </a>
     </div>
     <div class="legal">
-        ©北京著信科技有限公司.
+        Copyright©2018-2019 北京著信科技有限公司 版权所有
     </div>
 </div>
 
